--- a/index.html
+++ b/index.html
@@ -257,6 +257,94 @@
                 </div>
             </div>
         </header>
+
+        <section id="services">
+            <div class="warpper">
+                <header>
+                    <h4>Serviços</h4>
+                    <h2>Como podemos ajudá-lo a se sentir melhor?</h2>
+                </header>
+                <div class="cards">
+
+                    <div class="card">
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+                            <path
+                                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                                stroke="#00856F"
+                                stroke-width="1.5"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                            />
+                        </svg>
+                        <h3>Problemas digestivos</h3>
+                        <p>
+                            Amet minim mollit non deserunt ullamco est sit
+                            aliqua dolor do amet sint. Velit officia consequat
+                            duis enim.
+                        </p>
+                    </div>
+
+                    <div class="card">
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+                            <path
+                                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                                stroke="#00856F"
+                                stroke-width="1.5"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                            />
+                        </svg>
+                        <h3>Problemas digestivos</h3>
+                        <p>
+                            Amet minim mollit non deserunt ullamco est sit
+                            aliqua dolor do amet sint. Velit officia consequat
+                            duis enim.
+                        </p>
+                    </div>
+
+                    <div class="card">
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+                            <path
+                                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                                stroke="#00856F"
+                                stroke-width="1.5"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                            />
+                        </svg>
+                        <h3>Problemas digestivos</h3>
+                        <p>
+                            Amet minim mollit non deserunt ullamco est sit
+                            aliqua dolor do amet sint. Velit officia consequat
+                            duis enim.
+                        </p>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+
         <script src="main.js"></script>
     </body>
 </html>
