--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body onscroll="onScroll()" class="">
         <nav id="navigation" class="">
             <div class="wrapper">
-                <a class="logo" href="#">
+                <a class="logo" href="#home">
                     <svg
                         width="133"
                         height="18"
@@ -68,8 +68,14 @@
                 </a>
                 <div class="menu">
                     <ul>
-                        <li><a href="#">Início</a></li>
-                        <li><a href="#">Serviços</a></li>
+                        <li>
+                            <a onclick="closeMenu()" href="#home">Início</a>
+                        </li>
+                        <li>
+                            <a onclick="closeMenu()" href="#services"
+                                >Serviços</a
+                            >
+                        </li>
                         <li><a href="#">Sobre</a></li>
                     </ul>
                     <a class="button" href="#">Agende sua consulta</a>
@@ -215,7 +221,7 @@
             </div>
         </nav>
 
-        <header class="wrapper">
+        <header id="home" class="wrapper">
             <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
             <h1>Assistência médica simplificada para todos</h1>
             <p>
@@ -265,7 +271,6 @@
                     <h2>Como podemos ajudá-lo a se sentir melhor?</h2>
                 </header>
                 <div class="cards">
-
                     <div class="card">
                         <svg
                             width="24"
@@ -340,11 +345,11 @@
                             duis enim.
                         </p>
                     </div>
-                    
                 </div>
             </div>
         </section>
-
+        <!-- Biblioteca revelando os elementos https://scrollrevealjs.org/ -->
+        <script src="https://unpkg.com/scrollreveal"></script>
         <script src="main.js"></script>
     </body>
 </html>
