more js, css and html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                                 >Serviços</a
                             >
                         </li>
-                        <li><a href="#">Sobre</a></li>
+                        <li>
+                            <a onclick="closeMenu()" href="#about">Sobre</a>
+                        </li>
                     </ul>
                     <a class="button" href="#">Agende sua consulta</a>
                     <ul class="social-links">
@@ -442,9 +444,23 @@
                 </header>
 
                 <div class="content">
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet sint. Velit officia consequat duis enim.
+                        Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet sint. Velit officia consequat duis enim.
+                        Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet sint. Velit officia consequat duis enim.
+                        Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet sint. Velit officia consequat duis enim.
+                        Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet sint.
+                    </p>
                 </div>
-                <img src="assets/happy-doctor-holding-a-clipboard-with-patients.png" alt="Doutor feliz segurando prancheta com pacientes">
+                <img
+                    src="assets/happy-doctor-holding-a-clipboard-with-patients.png"
+                    alt="Doutor feliz segurando prancheta com pacientes"
+                />
             </div>
         </section>
 
