--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         </nav>
 
         <section id="home">
-            <div class="wapper">
+            <div class="wrapper">
                 <header>
                     <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
                     <h1>Assistência médica simplificada para todos</h1>
@@ -237,6 +237,7 @@
                         tratar a causa raiz de sua doença e proporcionar uma
                         cura a longo prazo.
                     </p>
+                    
                     <a class="button" href="#contact">
                         <svg
                             width="18"
