--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             rel="stylesheet"
         />
     </head>
-    <body onscroll="onScroll()">
+    <body>
         <nav id="navigation">
             <div class="wrapper">
                 <a class="logo" href="#home">
@@ -69,7 +69,9 @@
                 <div class="menu">
                     <ul>
                         <li>
-                            <a onclick="closeMenu()" href="#home">Início</a>
+                            <a class="active" onclick="closeMenu()" href="#home"
+                                >Início</a
+                            >
                         </li>
                         <li>
                             <a onclick="closeMenu()" href="#services"
